Particle drip work

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,11 @@
 # Get access to the registered sprite sheets
 public net.minecraft.client.particle.ParticleManager field_215242_i #sprites
+
+# Access Particle members to handle DripParticle ground collision
+public net.minecraft.client.particle.Particle field_187132_l #onGround
+public net.minecraft.client.particle.Particle field_187126_f #posX
+public net.minecraft.client.particle.Particle field_187127_g #posY
+public net.minecraft.client.particle.Particle field_187128_h #posZ
+
+# DripParticle fluid type access
+public net.minecraft.client.particle.DripParticle field_204502_a #fluid
