--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -13,7 +13,7 @@ logoFile="logo.png"
 	authors="§6OreCruncher§r\n"
 	description="\nGiving §6biomes§r special §6effects§r."
 	
-[[dependencies.mobeffects]]
+[[dependencies.environs]]
     modId="forge"
     mandatory=true
     versionRange="[28.1.96,)"
@@ -23,6 +23,6 @@ logoFile="logo.png"
 [[dependencies.environs]]
     modId="sndctrl"
     mandatory=true
-    versionRange="[1.14.4-0.0.5,)"
+    versionRange="[1.14.4-0.0.6,)"
     ordering="AFTER"
     side="CLIENT"
