--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,11 +7,11 @@ logoFile="logo.png"
 [[mods]]
 	modId="environs"
 	version="${version}"
-	displayName="§3Dynamic Surroundings\n§eEnvirons"
+	displayName="§3Dynamic Surroundings: §eEnvirons"
 	updateJSONURL="https://raw.githubusercontent.com/OreCruncher/Environs/master/version.json"
 	credits="\n\n§6All the Players§r that installed and enjoyed §2Dynamic Surroundings§r\n"
 	authors="§6OreCruncher§r\n"
-	description="\nGiving §6biomes§r special §6effects§r."
+	description="\nAdds §6sound§r and §6visual§r effects to §6biomes§r"
 	
 [[dependencies.environs]]
     modId="forge"
@@ -23,6 +23,6 @@ logoFile="logo.png"
 [[dependencies.environs]]
     modId="sndctrl"
     mandatory=true
-    versionRange="[1.14.4-4,)"
+    versionRange="[1.14.4-0.1,)"
     ordering="AFTER"
     side="CLIENT"
