--- a/src/main/resources/assets/environs/environs/biomesoplenty.json
+++ b/src/main/resources/assets/environs/environs/biomesoplenty.json
@@ -2,7 +2,14 @@
   "biomes": [
     {
       "conditions": "biome.id == 'biomesoplenty:cold_desert'",
-      "_comment": "BoP Cold Desert dust explicit set",
+      "_comment": "BoP Cold Desert fog explicit set",
+      "fog": true,
+      "fogColor": "220,219,223",
+      "fogDensity": 0.4
+    },
+    {
+      "conditions": "biome.id == 'biomesoplenty:ghost_forest'",
+      "_comment": "BoP Ghost Forest fog explicit set",
       "fog": true,
       "fogColor": "220,219,223",
       "fogDensity": 0.4
